<resources>

    <!-- APPLICATION SECTION -->
    <!-- Base application -->
    <string name="app_name">PackStar</string>

    <!--Base application theme - Discard dialog-->
    <string name="dialog_title">Discard your changes?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_discard">Discard</string>

    <!--Base application theme - Comment dialog-->
    <string name="dialog_ok" translatable="false">OK</string>

    <!--Base application theme - Reminder dialog-->
    <string name="dialog_reminder_title">Which action would you like to take?</string>
    <string name="dialog_reminder_edit">Edit</string>
    <string name="dialog_reminder_delete">Delete</string>

    <!--Base application theme - Help dialog-->
    <string name="dialog_help">
        Gestures \n\n\n
        Single tap - edit the item \n\n
        Swipe left - delete the item \n\n
        Drag and Drop - reorganize items
    </string>

    <!--Base application theme - Discard dialog-->
    <string name="dialog_delete_title">Delete this bag?</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialog_delete_delete">Delete</string>

    <!--Base application theme - OverSystemWeight Dialog-->
    <string name="dialog_over_system_weight">Maximum system weight is 99kg</string>

    <!--Base application - units -->
    <string name="unit_kg" translatable="false">kg</string>

    <!--Base application - placeholders -->
    <string name="placeholder_number_zero" translatable="false">0</string>

    <!--Base application - snackbars -->
    <string name="snackbar_undo">UNDO</string>
    <string name="snackbar_item_deleted">Item deleted</string>

    <!--Base application - shared preferences -->
    <string name="shared_preferences_first_run">FIRST_TIME</string>

    <!-- SCREEN SECTION -->
    <!--Home Screen-->
    <string name="going_on_an_adventure_description">Going on an adventure?</string>
    <string name="create_first_bag">Create your first bag by tapping the\nplus button</string>

    <!--Create Bag Screen-->
    <string name="title_screen_create_bag">New bag</string>
    <string name="edit_text_hint_bag_name">Bag name</string>
    <string name="edit_text_description_bag_name">Delete bag name</string>
    <string name="edit_text_hint_bag_date">Travel date</string>
    <string name="edit_text_description_bag_date">Delete travel date</string>
    <string name="edit_text_hint_bag_weight">Total weight (kg)</string>
    <string name="edit_text_description_bag_weight">Delete total weight</string>
    <string name="edit_text_hint_bag_comment">Add comment</string>
    <string name="edit_text_description_bag_comment">Delete comment</string>
    <string name="fab_text">Save</string>
    <string name="fab_description">Save bag</string>
    <string name="ic_reminder_description">Reminder icon</string>
    <string name="alert_create_bag_name_required">Please, enter bag name</string>
    <string name="alert_create_bag_date_required">Please, enter trip date</string>
    <string name="reminder_create_bag_invalid_time">Invalid time. Please, set future reminder time</string>
    <string name="reminder_create_bag_trip_is_coming">Your trip is coming soon</string>
    <string name="reminder_create_bag_add_success">Reminder added to your calendar</string>
    <string name="reminder_create_bag_update_success">Reminder updated</string>
    <string name="reminder_create_bag_delete_success">Reminder deleted</string>
    <string name="reminder_create_bag_update_delete_failure">Entry not found, create new one</string>
    <string name="reminder_permission_read_write">Read/Write calendar permission is needed to create reminders</string>
    <string name="reminder_none">Add reminder</string>
    <string name="reminder_calendar_not_found">Calendar not found</string>

    <!--List Bag Screen-->
    <string name="title_screen_list_bag">Packstar</string>
    <string name="label_bag_name">Bag name</string>
    <string name="label_bag_date">Bag date</string>
    <string name="label_bag_weight">Bag weight</string>
    <string name="label_bag_item">item</string>
    <string name="label_bag_items">items</string>
    <string name="label_add_item">Add item</string>
    <string name="menu_dots_edit">Edit</string>
    <string name="menu_dots_delete">Delete</string>
    <string name="menu_dots_share">Share</string>
    <string name="list_bag_popup_delete">Bag deleted</string>
    <string name="list_bag_comment_empty">No comments. To add one, tap the menu button and then edit bag</string>
    <string name="menu_dots_description">Menu</string>
    <string name="bullet_no_comment">Bullet gray</string>
    <string name="bullet_with_comment">Bullet orange</string>
    <string name="bullet_no_reminders">Bullet orange</string>
    <string name="bullet_with_reminders">Bullet orange</string>
    <string name="bullet_overweight">Bullet red</string>
    <string name="label_no_comments">No comments</string>
    <string name="label_read_comment">Read comment</string>
    <string name="label_no_reminders">No reminders</string>
    <string name="label_overweight">OVERWEIGHT</string>

    <!--Create Item Screen-->
    <string name="title_screen_create_item">Add item</string>
    <string name="edit_text_hint_item_name">Name</string>
    <string name="edit_text_description_item_name">Delete item name</string>
    <string name="edit_text_hint_item_quantity">Quantity</string>
    <string name="edit_text_description_item_quantity">Delete item quantity</string>
    <string name="edit_text_hint_item_weight">Weight (kg)</string>
    <string name="edit_text_description_item_weight">Delete item weight</string>
    <string name="textView_ic_arrow_right_red">Need to buy</string>
    <string name="textView_ic_arrow_right_green">Already have</string>
    <string name="alert_create_item_name_required" translatable="false">Please, enter item name</string>
    <string name="alert_create_item_quantity_required" translatable="false">Please, enter item quantity</string>


    <!--List Item Screen-->
    <string name="title_screen_list_item">Items</string>
    <string name="label_item_quantity">Quantity:</string>
    <string name="label_item_number">number</string>
    <string name="label_item_weight">Weight (kg):</string>
    <string name="label_item_number_weight">number weight</string>
    <string name="imageview_description_status">status image</string>
    <string name="menu_chip_need_to_buy">Need to buy</string>
    <string name="menu_chip_already_have">Already have</string>
    <string name="menu_chip_remove">Remove</string>
    <string name="menu_chip_updated_item">Status updated</string>

    <!--Edit Item Screen-->
    <string name="title_screen_edit_item">Edit item</string>

    <!--Edit Bag Screen-->
    <string name="title_screen_edit_bag">Edit bag</string>
    <string name="alert_edit_item_name_required" translatable="false">Please, enter item name</string>
    <string name="alert_edit_item_quantity_required" translatable="false">Please, enter item quantity</string>

    <!--Empty Bag Screen-->
    <string name="title_screen_empty_bag">PackStar</string>
    <string name="image_empty_bag_description">flying spaceship</string>
    <string name="label_no_entry">There\'s nothing here</string>
    <string name="label_no_entry_bag">You have not added anything yet</string>
    <string name="label_add_new_bag">Tap the \"+\" button below to create a new bag</string>

    <!--Empty Item Screen-->
    <string name="title_screen_empty_item">PackStar</string>
    <string name="image_empty_item_description">robot hiding behind a bag</string>
    <string name="label_no_entry_item">There\'s nothing here</string>
    <string name="label_no_entry_item2">You have not added anything yet</string>
    <string name="label_add_new_item">Tap the \"+\" button below to create a new item</string>

</resources>