<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textview_need_to_buy"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_chip_need_to_buy"
        android:textSize="12sp"
        android:textStyle="bold"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textview_already_have"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_chip_already_have"
        android:textSize="12sp"
        android:textStyle="bold"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textview_remove"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_chip_remove"
        android:textSize="12sp"
        android:textStyle="bold"
        android:padding="10dp"/>

</LinearLayout>